# interview-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  FACE_ANALYSIS_FIX_REPORT.md  LICENSE  LOGGING.md  README.md  VIDEO_TRANSCODING_OPTIMIZATION.md  diagnose_gpu.py  pyproject.toml  requirements-base.txt  requirements-cpu.txt  requirements-cuda.txt  requirements-mps.txt  requirements.txt  tail_log.py  test_gpu_detection.py  test_logging_system.py  test_pipeline_logger.py  test_simple_logging.py  test_transcode_performance.py  verify_funasr_gpu.py
docker/: Dockerfile.api  Dockerfile.cpu  Dockerfile.gpu  docker-compose.prod.yml  docker-compose.yml  nginx.conf
docs/: CROSS_PLATFORM.md  DEVELOPMENT_STATUS.md  README.md  TECHNICAL_STACK.md  checklist.md  development-plan.md  feasibility-report.md  requirements-spec.md  spec.md  tasks.md  technical-design.md
docs/api/: README.md  interviews.md  process.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: download_models.py  install_deps.py  migrate_add_stt_engine.py  migrate_segments.py  split_video.py  split_video.sh  test_pipeline.py
src/: __init__.py
src/api/: auth.py  deps.py  main.py
src/core/: __init__.py  config.py  exceptions.py
src/models/: __init__.py  database.py
src/services/: __init__.py  interview.py
src/utils/: fonts.py  gpu.py  logging.py  pipeline_logger.py  system_check.py  video_transcoder.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/unit/: test_cascade_engine.py  test_diarization_engine.py  test_emotion_engine.py  test_face_engine.py  test_interviews.py  test_models.py  test_prosody.py  test_schemas.py
(+51 files in other folders)
