[tool.poetry]
name = "interview-ai"
version = "0.1.0"
description = "Interview Video Intelligence System"
authors = ["Interview AI Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
torch = "^2.1.0"
torchaudio = "^2.1.0"
numpy = "^1.26.0"
faster-whisper = "^1.0.0"
pyannote-audio = "^3.1.0"
funasr = "^1.3.0"
demucs = "^4.0.0"
librosa = "^0.10.1"
soundfile = "^0.12.1"
scipy = "^1.11.0"
opencv-python = "^4.8.0"
av = "^12.0.0"
scenedetect = "^0.6.2"
transformers = "^4.36.0"
accelerate = "^0.25.0"
pillow = "^10.1.0"
tqdm = "^4.66.1"
httpx = "^0.25.2"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "ISC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
